Closed Bug 106022 Opened 23 years ago Closed 23 years ago

Every typed character/Keyboard shortcut is *doubled* when entered

Categories

(Core :: DOM: UI Events & Focus Handling, defect)

PowerPC
Mac System 8.6
defect
Not set
blocker

Tracking

()

VERIFIED FIXED
mozilla0.9.6

People

(Reporter: benjamin, Assigned: Brade)

References

Details

(Keywords: regression)

Mozilla 0.9.5+
Mozilla/5.0 (Macintosh; U; PPC; en-US; rv:0.9.5+) Gecko/20011022
BuildID:    2001102204

Anywhere in this build (Browser/Mail/...) when I enter any caracter I got 
something like:

wwwwww..aappppllee..ccoomm for www.apple.com

same think on paste function / delete key... cmd+n open two new browser windows / 
cmd+m two new mail composer windows...

Reproducible: Always
Summary: Every caracters/Keyboard shortcut are *doubled* when entered → Every character/Keyboard shortcut is *doubled* when entered
This WorksForMe using Mac/2001102208. Reporter, it looks like there's a newer build 
today. I suggest you retest using it.
Same thing in Mozilla 0.9.5+
Mozilla/5.0 (Macintosh; U; PPC; en-US; rv:0.9.5+) Gecko/20011022
Build 2001102208


Reproduce on 2 computers MacOS 8.6

Regression / Major



Severity: normal → major
Keywords: regression
I don't see this in my debug mozilla build from today.

When did you first notice this regression (with 10/22 build?)?
(What build prior to 10/22 did you have no problems with?)
If you install/run an older build, does it work as expected?
2001101908 is (was) Ok.
do you have a special keyboard? (usb/adb, model, ...)
PM8600 or PM8500 / ADB Apple Extended Keyboard II. Not problem before 2001102204. 
Will try on a PB G333 later...
IIff  iitt  hheellppss,,  aass  yyouou c canan  sseeee  II  aamm  aallsoso 
sseeiinngg t hthiis s pproroblbleemm  ssttaarrttiinng gw wiitthh 
22000011110022220088..  II  jjuustst  ddoowwnnllooaaddeedd  tthehe  llaatteesstt
 nniighgthtllyy  bubuiilldd  llaasstt  nniighghtt..

The only way I can get input into mozilla is to type in another app, and drag
and drop the text.

I don't know what version I was using prior to this, but it did not have the
"Print Setup"  file menu option, but was 0.9.5+.
shotgun cc:
same thing in 2001102404. Something must be done. I can't test Moz anymore with 
this!
This WorksForMe using Mac/2001102408. No double characters.

This is on a G4 with a USB keyboard. Benjamin, have you ruled out extensions trouble?
Does this only happen on Mac OS 8.6?
0.9.5 release and builds prior 2001101908 work great on my PM8600/8.6. I will try 
later to restart on 9.1 and 8.6 w/ the minimum extensions set on my PM8600 to see 
if it's OS/extensions related.
I downloaded today's build onto a Mac with 8.6; I see this bug.  :-(
I will take this bug but I'm going to be on vacation for a few days so I won't be 
able to look into it.  Anyone else should feel free to grab it and fix it.
Assignee: asa → brade
Severity: major → critical
Status: UNCONFIRMED → NEW
Ever confirmed: true
*** Bug 106591 has been marked as a duplicate of this bug. ***
I see this too (MacOS 8.6) in all nightlies after 2001101908 (this is the last
one that works) up to 2001102609 (the last one available right now).

The characters are doubled because Mozilla prints a character both when a key is
pressed and when that key is released again. This makes entering URLs
impossible, as such the browsing experience is quite impaired :(
ugh. tweaking summary to catch dupes for all of my 8.6 brethren out there.
Summary: Every character/Keyboard shortcut is *doubled* when entered → Every typed character/Keyboard shortcut is *doubled* when entered
*** Bug 107978 has been marked as a duplicate of this bug. ***
->saari?
Assignee: brade → saari
Component: Browser-General → Event Handling
QA Contact: doronr → madhur
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla0.9.7
Saari--are you working on this bug or do you want to reassign it back to me?
brade, I'm giving it back to you because I'm totally swamped. Sorry.
Assignee: saari → brade
Status: ASSIGNED → NEW
Bbrraadd  ccaann  yyoouu  ddoo  sosomemetthhiinngg  AASSAAPP  ffoorr  tthhisis 
oonnee  pplleeaassee??
Build 2001110604 still a problem on Mac G3/233 running 8.6
Well, I tried debugging with 2 Macs and had problems with the shared library I
needed not loading properly.  I rebuilt on 8.6 (took 2 days) and it crashed in
unrelated code (before I typed anything).  I am now updating and rebuilding again.
Status: NEW → ASSIGNED
nsMacTSMMessagePump::UnicodeNotFromInputMethodHandler is getting called twice on
OS8.6; I haven't figured out why yet.

It's not because we install the handler twice (it's only installed once).
The bug doesn't show up if you stop in the debugger.

Frank--any ideas/suggestions?
109004 is a duplicate of this bug.
Tried on three different Macs with OS 8.6
*** Bug 109004 has been marked as a duplicate of this bug. ***
So changing Init to the following fixes the bug for me on 8.6.
I still don't understand why it gets called twice on OS8.6.
void nsTSMStrategy::Init()
{
  if ( !gInit)
  {
    gInit = PR_TRUE;
    OSErr  err;
    long version;
    err = Gestalt(gestaltTSMgrVersion, &version);
    if ((err == noErr) && (version >=  gestaltTSMgr15))
    {
      gUseUnicodeForInputMethod = PR_TRUE;
      // only enable if OS 9.0 or greater; there is a bug
      // (in at least OS 8.6) that causes double input (Bug #106022)
      err = Gestalt(gestaltSystemVersion, &version);
      gUseUnicodeForKeyboard = (err == noErr) && (version >= 0x900);
    } 
#ifdef FORCE_USE_UNICODE_API
    gUseUnicodeForInputMethod = PR_TRUE;
#elif defined( FORCE_NOT_USE_UNICODE_API )
    gUseUnicodeForInputMethod = PR_FALSE;
#endif
    // there are no way we can use unicode for keyboard, but not using 
    // Unicode for IME
    if ( !gUseUnicodeForInputMethod)
      gUseUnicodeForKeyboard = PR_FALSE;
  }
    
}


We should checkin at least this fix for 0.9.6 or many users will waste their time 
downloading a horrible build.
Target Milestone: mozilla0.9.7 → mozilla0.9.6
May I kindly request someone advocate that this bug fix be included for 0.96. I
am stuck at 0.95. You guys are doing wonderful work for the Mac build. Keep up
the good work.
Blocks: 104864
*** Bug 109287 has been marked as a duplicate of this bug. ***
Why isn't it a smoketest blocker? I cannot imagine how you can read POP mail
(test M.5) with this bug if you don't let Mozilla remember the password. Also
configuring a news server (M.3) could be impossible. So is actually typing a URL
in Browser (B.4). The word "type" (in the keyboard meaning) occurs in 6 other
smoketests. 

And don't tell me that there is a workaround (typing in any other application
and using copy&paste) because it would be a very poor joke. Actually using the
other application could be an easier workaround.
actually the workaround wouldn't work unless you used the menu to paste (pressing 
command-v wouldn't work, you'd get 2 pastes!)

This isn't a smoketest blocker because smoketests aren't run on such old systems.  
:-/  A fix is coming...

Simon--please sr= the Init method above
Frank--please r= the Init method above
Severity: critical → blocker
Whiteboard: needs r= sr=
I want to see ftang's input here.
r=ftang. I think it is ok to just support that on 9.0. I think brade's approach
is good. 
sr=sfraser
One more thought: many schools are using older Macs with 8.6. 8.6 I believe is
now a free upgrade. By only supporting 9.0 you may create a situation where many
schools will be unable to adopt Netscape 6.2. Not all the schools have their the
most up to date OS. The schools want the same browser on all the Macs regardless
of which version of the OS. The schools cannot afford of udpdate the OS on older
Macs.
MacOS 8.6 is End of Life on many Power Macs.  Thus, they will never be upgraded, 
but they are still very useful machines,

MacOS 8.1 is End of Life for late model 68K Macs.  Yet, we're still running them!  
So, this needs to run on those, too.

Heck, I think this should be tested on MacOS 7.6....

There were so many stability problems with 9.0 and 9.1, many of us CHOOSE not to 
upgrade!  I hear that 9.2 is OK, but I'm not sure it will run on my WallStreet.  
I know that 10.1 won't -- and besides, I need to get real work done.  MacOS X 
suffers from many of the performance issues that Mozilla mail does, presumably 
"second system syndrome."
I agree with wsimpson:
I'm using a PowerBook 1400 at home and a Blue & White G3 in my office. Both are
running MacOS 8.6, and I have no intention of "upgrading" to a newer OS.
I have not been able to use Mozilla since I am using 8.6. Can someone please :)
advocate that that Brad's fix below be tested for possible inclusion in 0.96? As
it stands I am unable to use any build newer than 0.95. Thanks. At this p[oint I
would vote for allow this fix in and the possiblility that it might destablize
the milestone rather than be totally locked out by this bug.
pbergsag@home.com: Same problem here with last builds under 8.6... they crash on 
launch.... No bug on this problem for 8.6 is filled I think... I am right? 
Perhaps bug 105486 ???
Asa--do I need approval to check in to 0.9.6 branch?
Whiteboard: needs r= sr= → needs a=
brade, was this checked in on the trunk? I ask because I'm using a 2001111408
build on MacOS 8.5.1(which I've been using with seamonkey from Day 1)  and I
can't type anything anywhere. whereas previously I was experiencing the same
pain everyone else was (double chars) on 8.6. Is this behavior related?

what happening to other people with current trunk builds on 8.6?
Claudius: trunk build 2001111408 shows the bug under 8.6 *as usual*.
hmmmm.... Yes, I checked in the above fix on the trunk.
I guess I need to update my tree and investigate more.
Thanks for the update Claudius.
Yes! WFM in 200111408. 
WFM in 2001111408. Thanks for fxing this bug.:)
Claudius--yesterday's build works fine for me.  Can you please retest?  I'd like
to get this checked into the branch.
Keywords: mozilla0.9.6
a=blizzard on behalf of drivers for 0.9.6
Tested on an 8600/200 running MacOS 8.6
Nov 15 full-install build does not exhibit this bug.
Hooray!
Remember, I'm using Mac OS 8.5.1 which i guess is on the fringes of support. I
started seeing this bug the same time others on 8.6 did. Sadly, whatever fixed
it for 8.6 users in build 2001111408 just made it worse for me.

With a 2001111604 build and a new profile after a reboot on MacOS 8.5.1 I cannot
type anything, anywhere in the entire product.

Yet under the same conditions with a 2001111108 build I get everything twice.
8.6 is considered to be the lowest OS we'll support... it is stable and a free
upgrade with other things in it that we rely upon.
whiteboard should perhaps be cleaned as a= was given.

Sorry for spam.
resolving this as fixed; filing a new bug (#110828) to for 8.5 and more
investigation.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Whiteboard: needs a=
verified
Status: RESOLVED → VERIFIED
Component: Event Handling → User events and focus handling
You need to log in before you can comment on or make changes to this bug.