fix bug #106022; disable unicode input for OS < 9.0 (r=ftang; sr=sfraser)